--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
   <p>Hello, World.</p>
 </html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js">
 function draw() {
   background(125,250,215);
 }
+</script>
