--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html>
+  <body style="background-color:Cyan>
   <p>Hello, World.</p>
+  <body>
 </html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js">
-function draw() {
-  background(125,250,215);
-}
-</script>
