--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
   <body>
-  <p style="background-color:Cyan>Hello, World.</p>
+  <p style="background-color:Cyan;">Hello, World.</p>        
   </body>
 </html>
