--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!doctype html>
 <html>
-  <body>
-  <p style="background-color:Cyan;">Hello, World.</p>        
+  <head>
+    <title>My lovely cakes</title>
+    <script type="text/javascript">
+      function picture() {
+          if(document.getElementById("billede").style.display == "block") {
+            document.getElementById("billede").style.display = "none";
+          } else {
+            document.getElementById("billede").style.display = "block";
+          }
+      }
+      function picture2() {
+          if(document.getElementById("billede2").style.display == "block") {
+            document.getElementById("billede2").style.display = "none";
+          } else {
+            document.getElementById("billede2").style.display = "block";
+          }
+      }
+    </script>
+  </head>
+  <body style="background-color:MediumAquaMarine;">
+    <h1 style="background-color:Cyan;">Hello, World.</h1>
+    <img id="billede" style="display: none" src="https://www.seriouseats.com/recipes/images/2017/06/20170526-no-bake-cheesecake-vicky-wasik-18-1500x1125.jpg">
+    <img id="billede2" style="display: none" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/10/easy_chocolate_cake.jpg?itok=79848APr">
+    <p style="background-color:Magenta;">This is a little project of mine</p>  
+    <button onclick="picture()">Cheesecake</button> 
+    <button onclick="picture2()">Chocolate cake</button>
+    <p2>I haven't made any of these cakes by the way</p2>     
   </body>
 </html>
