--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
   </head>
   <body style="background-color:MediumAquaMarine;">
-    <h1 style="background-color:Cyan;">Hello, World.</h1>
+    <h1 style="background-color:Cyan;">Hello, Woorld.</h1>
     <img id="billede" style="display: none" src="https://www.seriouseats.com/recipes/images/2017/06/20170526-no-bake-cheesecake-vicky-wasik-18-1500x1125.jpg">
     <img id="billede2" style="display: none" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/10/easy_chocolate_cake.jpg?itok=79848APr">
     <p style="background-color:Magenta;">This is a little project of mine</p>  
