--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <p style="background-color:Magenta;">This is a little project of mine</p>  
     <button onclick="picture()">Cheesecake</button> 
     <button onclick="picture2()">Chocolate cake</button>
-    <p2 style="background-color:MidNightBlue;">I haven't made any of these cakes by the way</p2>     
+    <p2 style="background-color:PowderBlue;">I haven't made any of these cakes by the way</p2>     
   </body>
 </html>
