--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             document.getElementById("ytvid2").style.display = "block";
           }
       }
+      function ytfile3() {
+          if(document.getElementById("ytvid3").style.display == "block") {
+            document.getElementById("ytvid3").style.display = "none";
+          } else {
+            document.getElementById("ytvid3").style.display = "block";
+          }
+      }
     </script>
   </head>
   <body style="background-color:MediumAquaMarine;">
@@ -39,11 +46,13 @@
     <img id="billede2" style="display: none" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/10/easy_chocolate_cake.jpg?itok=79848APr">    
     <a id="ytvid" style="display: none" href="https://www.youtube.com/watch?v=CnxrR-28qhU">Youtube</a>
     <a id="ytvid2" style="display: none" href="https://www.youtube.com/watch?v=4yWk5apHETQ">Youtube</a>
+    <a id="ytvid3" style="display: none" href="https://www.youtube.com/watch?v=vr9O0uR4-Kw">Youtube</a>
     <p style="background-color:Magenta;">This is a little project of mine</p>  
     <button onclick="picture()">Cheesecake</button> 
     <button onclick="picture2()">Chocolate cake</button>
     <p2 style="background-color:PowderBlue;">I haven't made any of these cakes by the way</p2>
     <button onclick="ytfile()">Youtube</button>
-    <button onclick="ytfile2()">Youtube2</button>      
+    <button onclick="ytfile2()">Youtube2</button>
+    <button onclick="ytfile3()">Youtube3</button>      
   </body>
 </html>
