--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             document.getElementById("ytvid3").style.display = "block";
           }
       }
+      function ytfile4() {
+          if(document.getElementById("ytvid4").style.display == "block") {
+            document.getElementById("ytvid4").style.display = "none";
+          } else {
+            document.getElementById("ytvid4").style.display = "block";
+          }
+      }
     </script>
   </head>
   <body style="background-color:MediumAquaMarine;">
@@ -47,12 +54,14 @@
     <a id="ytvid" style="display: none" href="https://www.youtube.com/watch?v=CnxrR-28qhU">Youtube</a>
     <a id="ytvid2" style="display: none" href="https://www.youtube.com/watch?v=4yWk5apHETQ">Youtube</a>
     <a id="ytvid3" style="display: none" href="https://www.youtube.com/watch?v=vr9O0uR4-Kw">Youtube</a>
+    <a id="ytvid4" style="display: none" href="https://www.youtube.com/watch?v=MwppzU3vq2Y">Youtube</a>
     <p style="background-color:Magenta;">This is a little project of mine</p>  
     <button onclick="picture()">Cheesecake</button> 
     <button onclick="picture2()">Chocolate cake</button>
     <p2 style="background-color:PowderBlue;">I haven't made any of these cakes by the way</p2>
     <button onclick="ytfile()">Youtube</button>
     <button onclick="ytfile2()">Youtube2</button>
-    <button onclick="ytfile3()">Youtube3</button>      
+    <button onclick="ytfile3()">Youtube3</button>
+    <button onclick="ytfile4()">Youtube4</button>      
   </body>
 </html>
