--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
     <button onclick="ytfile2()">Youtube2</button>
     <button onclick="ytfile3()">Youtube3</button>
     <button onclick="ytfile4()">Youtube4</button>
-    <p3 style="background-color:YellowGreen;">All them vids, tho</p3>      
+    <p3 style="background-color:BlueViolet;">All them vids, tho</p3>      
   </body>
 </html>
