--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       }
     </script>
   </head>
-  <body style="background-color:MediumAquaMarine;">
+  <body style="background-color:LimeGreen;">
     <h1 style="background-color:Cyan;">Hello, World.</h1>
     <img id="billede" style="display: none" src="https://www.seriouseats.com/recipes/images/2017/06/20170526-no-bake-cheesecake-vicky-wasik-18-1500x1125.jpg">
     <img id="billede2" style="display: none" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/10/easy_chocolate_cake.jpg?itok=79848APr">    
