hey spodermen u r an fagit

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <h1 style="background-color:Cyan;">Hello, World.</h1>
     <img id="billede" style="display: none" src="https://www.seriouseats.com/recipes/images/2017/06/20170526-no-bake-cheesecake-vicky-wasik-18-1500x1125.jpg">
     <img id="billede2" style="display: none" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/10/easy_chocolate_cake.jpg?itok=79848APr">    
+    <img id="billede3" style="display: block" src="http://i0.kym-cdn.com/photos/images/original/000/924/244/1e2.png">
     <a id="ytvid" style="display: none" href="https://www.youtube.com/watch?v=CnxrR-28qhU">Youtube</a>
     <a id="ytvid2" style="display: none" href="https://www.youtube.com/watch?v=4yWk5apHETQ">Youtube</a>
     <a id="ytvid3" style="display: none" href="https://www.youtube.com/watch?v=vr9O0uR4-Kw">Youtube</a>
@@ -63,6 +64,6 @@
     <button onclick="ytfile2()">Youtube2</button>
     <button onclick="ytfile3()">Youtube3</button>
     <button onclick="ytfile4()">Youtube4</button>
-    <p3 style="background-color:BlueViolet;">All them vids, tho</p3>      
+    <p3 style="background-color:BlueViolet;">All them vids, tho</p3>
   </body>
 </html>
