--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             document.getElementById("billede2").style.display = "block";
           }
       }
-      function ytfile() {
-          if(document.getElementById("ytvid").style.display == "block") {
-            document.getElementById("ytvid").style.display = "none";
+      function ytfile1() {
+          if(document.getElementById("ytvid1").style.display == "block") {
+            document.getElementById("ytvid1").style.display = "none";
           } else {
-            document.getElementById("ytvid").style.display = "block";
+            document.getElementById("ytvid1").style.display = "block";
           }
       }
       function ytfile2() {
@@ -52,18 +52,20 @@
     <img id="billede" style="display: none" src="https://www.seriouseats.com/recipes/images/2017/06/20170526-no-bake-cheesecake-vicky-wasik-18-1500x1125.jpg">
     <img id="billede2" style="display: none" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/10/easy_chocolate_cake.jpg?itok=79848APr">    
     <img id="billede3" style="display: block" src="http://i0.kym-cdn.com/photos/images/original/000/924/244/1e2.png">
-    <a id="ytvid" style="display: none" href="https://www.youtube.com/watch?v=CnxrR-28qhU">Youtube</a>
-    <a id="ytvid2" style="display: none" href="https://www.youtube.com/watch?v=4yWk5apHETQ">Youtube</a>
-    <a id="ytvid3" style="display: none" href="https://www.youtube.com/watch?v=vr9O0uR4-Kw">Youtube</a>
-    <a id="ytvid4" style="display: none" href="https://www.youtube.com/watch?v=MwppzU3vq2Y">Youtube</a>
+    <a id="ytvid1" style="display: none" href="https://www.youtube.com/watch?v=CnxrR-28qhU" target="_blank">Youtube1</a>
+    <a id="ytvid2" style="display: none" href="https://www.youtube.com/watch?v=4yWk5apHETQ" target="_blank">Youtube2</a>
+    <a id="ytvid3" style="display: none" href="https://www.youtube.com/watch?v=vr9O0uR4-Kw" target="_blank">Youtube3</a>
+    <a id="ytvid4" style="display: none" href="https://www.youtube.com/watch?v=MwppzU3vq2Y" target="_blank">Youtube4</a>
+    <a id="ytvid5" style="display: none" href="https://www.youtube.com/watch?v=fd2AjG9RaKs" target="_blank">Youtube5</a>
     <p style="background-color:Magenta;">This is a little project of mine</p>  
     <button onclick="picture()">Cheesecake</button> 
     <button onclick="picture2()">Chocolate cake</button>
     <p2 style="background-color:PowderBlue;">I haven't made any of these cakes by the way</p2>
-    <button onclick="ytfile()">Youtube</button>
+    <button onclick="ytfile1()">Youtube1</button>
     <button onclick="ytfile2()">Youtube2</button>
     <button onclick="ytfile3()">Youtube3</button>
     <button onclick="ytfile4()">Youtube4</button>
+    <a id="ytvid5" href="https://www.youtube.com/watch?v=fd2AjG9RaKs" target="_blank"><button>Youtube5</button></a>
     <p3 style="background-color:BlueViolet;">All them vids, tho</p3>
     <p4 style="background-color:LightSkyBlue;">Cakes are yummy</p4>
   </body>
